--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "pdm1-exs",
-    "slug": "snack-1e113716-0677-4c4c-b704-b007c255810d",
+    "name": "PDM",
+    "slug": "PDM",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
